major!: @lxjx/hooks -> @m78/hooks

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,28 +1,22 @@
-**/*.svg
-package.json
-.umi
-.md
-.umi-production
-/dist
-/lib
-.dockerignore
-.DS_Store
-.eslintignore
-*.png
-*.toml
-docker
-.editorconfig
-Dockerfile*
-.gitignore
-.prettierignore
-LICENSE
-.eslintcache
-*.lock
-yarn-error.log
-.history
+*.svg
 *.jpg
+*.png
 *.txt
 *.eot
 *.ttf
 *.woff
 *.woff2
+.history
+.idea
+.vscode
+*.lock
+pnpm-lock.yaml
+*.log
+LICENSE
+.gitignore
+.editorconfig
+/dist
+/lib
+/umd
+/esm
+.umi/
